build/log/idf_py_stderr_output_21826
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void uart_init()':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:35:3: warning: missing initializer for member 'uart_config_t::rx_flow_ctrl_thresh' [-Wmissing-field-initializers]
   35 |   };
      |   ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:35:3: error: designator order for field 'uart_config_t::rx_flow_ctrl_thresh' does not match declaration order in 'const uart_config_t'
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2437: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
